--- a/ranker.ipynb
+++ b/ranker.ipynb
@@ -201,6 +201,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "5032826a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lib.optimizer.gd import SGD"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "4e304944",
    "metadata": {},
